# BA_PY

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.json  requirements.txt  setup.py
data/: plot.xlsx
docs/: base.md  build.md  file.md  game.md  index.md  index.rst  paper.md  plot.md  requirements.txt  scripts.md  stats.md
docs/bio/: peptide.md
docs/dl_torch/: basic blocks.md  data.md  model.md  optim.md  utils.md
docs/file_utils/: image.md  video.md
docs/plot_utils/: bar_utils.md  scatter_utils.md
docs/release_notes/: 0.0.1.md  0.0.12.md  0.0.14.md  0.0.2.md  0.0.3.md  0.0.4.md  0.0.6.md  0.0.9.md  0.1.0.md  0.1.1.md  0.1.2.md  0.1.3.md  0.1.4.md  0.10.0.md  0.10.1.md  0.10.2.md  0.10.3.md  0.10.4.md  0.10.5.md  0.11.0.md  0.11.3.md  0.11.4.md  0.11.5.md  0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.6.0.md  0.6.1.md  0.6.2.md  0.6.3.md  0.7.0.md  0.7.1.md  0.7.1b1.md  0.7.2.md  0.7.3.md  0.7.4.md  0.8.0.md  0.8.1.md  0.8.2.md  (+12 more)
docs/sci_instrument/: _base.md  _utils.md
docs/sci_instrument/hplc/: SCIEX.md  _base.md  _utils.md  waters.md
docs/sci_instrument/mass/: SCIEX.md  _base.md  _utils.md
docs/sci_utils/: paper_download.md  paper_parse.md  paper_search.md
docs/scripts/: avif.md  batch_cmd.md  cnipa.md  cp.md  duitang.md  extract-dir.md  extract_paper.md  file-size.md  hplc.md  mass.md  mv.md  peptide.md  reviz.md  rm.md  scihub.md  scihub_selenium.md  till.md  video.md
docs/source/: conf.py
docs/stats_utils/: cluster.md  df.md  reg.md  test.md
docs/web/: parse.rst  task.md
docs/web_utils/: parse.md  request.md  spider.md  task.md
examples/: requirements.txt
examples/file/: file.py  text.py
examples/plot/: gif.py  qrcode.py
examples/plot/sci/: bar.ipynb  dev.py  dev2.py  dev3.py
examples/plot/turtleDraw/: lifeRainBow.py  tree.py
examples/stats/: dev.py
examples/torch/: dev.ipynb
examples/torch/model/: seq2seq.py
examples/web/: captcha.py  dev.py
examples/web/crawler/: 12306.py  autoCitePaperDownloader.py  chaoxinReading.py  chaoxing.py  chemSub.py  cnipa.py  scihub_wget.py  wjx.py  wujin.py
mbapy/: __init__.py  __version__.py  base.py  file.py  game.py  paper.py  plot.py  web.py
mbapy/bio/: __init__.py  high_level.py  peptide.py
mbapy/chem/: formula.py
mbapy/cpp/file/: CMakeLists.txt  build.bat  main.cpp  make.sh
mbapy/cpp/mbapy-cli/linux/: CMakeLists.txt  main.cpp  make.sh
mbapy/cpp/sci/linux/: CMakeLists.txt  main.cpp  make.sh
mbapy/cpp/sci/win64/: CMakeLists.txt  build.bat  main.cpp
mbapy/cpp/stats/linux/: CMakeLists.txt  main.cpp  make.sh
mbapy/cpp/stats/win64/: CMakeLists.txt  build.bat  main.cpp
mbapy/dl_torch/: __init__.py  bb.py  data.py  hyper_search.py  loss.py  m.py  optim.py  utils.py
mbapy/dl_torch/arch/: __init__.py
mbapy/dl_torch/arch/CL/: __init__.py  builder.py  trainer.py
mbapy/dl_torch/arch/CLIP/: __init__.py
mbapy/dl_torch/paper/: __init__.py  bb.py
mbapy/examples/plot/sci/: bar.ipynb  bar.py  debug.py  dev.py  dev2.py
mbapy/examples/stats/: dev.py
mbapy/examples/torch/model/: seq2seq.py
mbapy/examples/web/: dev.py
mbapy/examples/web/crawler/: chaoxing.py  chemSub.py  wjx.py  wujin.py
mbapy/file_utils/: image.py  video.py
mbapy/plot_utils/: bar_utils.py  scatter_utils.py
mbapy/sci/: __init__.py  paper.py
mbapy/sci_instrument/: _base.py  _utils.py
mbapy/sci_instrument/hplc/: Easychrom.py  SCIEX.py  __init__.py  _base.py  _utils.py  waters.py
mbapy/sci_instrument/mass/: Agilent.py  SCIEX.py  __init__.py  _base.py  _utils.py
mbapy/sci_utils/: paper_download.py  paper_parse.py  paper_pdf.py  paper_search.py
mbapy/scripts/: __init__.py  __main__.py  _main_.py  _script_utils_.py  auto_cpp.py  avif.py  batch_cmd.py  cluster.py  cmd_runner.py  cnipa.py  copy_file.py  cp.py  duitang.py  extract-dir.py  extract_dir.py  extract_paper.py  extract_pdf_toc.py  file-size.py  file_size.py  find_file.py  help.py  hplc.py  install.py  mass.py  move_file.py  mv.py  peptide.py  remove_file.py  reviz.py  rm.py  scihub.py  scihub_selenium.py  splash_img.py  till.py  uninstall.py  video.py
mbapy/stats/: __init__.py  cluster.py  df.py  geography.py  reg.py  test.py
mbapy/storage/: mbapy-cli-scripts-list.json
mbapy/test/: base test.py
mbapy/test/dl_t/: BasicBlock.py  Model.py  data.py  papers_bb.py
mbapy/test/stats/: test_test.py
mbapy/web_utils/: parse.py  request.py  spider.py  task.py
mbapy_lite/: __init__.py  __version__.py  base.py  file.py  game.py  plot.py  web.py
mbapy_lite/bio/: __init__.py  high_level.py  peptide.py
mbapy_lite/plot_utils/: bar_utils.py  scatter_utils.py
mbapy_lite/stats/: __init__.py  cluster.py  df.py  reg.py  test.py
mbapy_lite/web_utils/: parse.py  request.py  spider.py  task.py
src/ba/: base.py  web.py
src/examples/file/: text.py
src/examples/plot/sci/: bar.py
src/examples/web/crawler/: chaoxinReading.py  chaoxing.py  chemSub.py  wujin.py
src/file/: file.py  text.py
src/mbapy/: __init__.py  __version__.py  base.py  file.py  plot.py  web.py
src/plot/: qrcode.py
src/plot/turtleDraw/: lifeRainBow.py
src/torch/model/: seq2seq.py
src/web/crawler/: autoCitePaperDownloader.py  chaoxinReading.py  chaoxing.py  chemSub.py  wujin.py
test/: teat_paper.py  test_base.py  test_game.py  test_web.py
test/dl_t/: BasicBlock.py  Model.py  data.py  optim.py  papers_bb.py
test/file/: test_file.py
test/plot_utils/: test_bar_utils.py
test/sci_instruments/hplc/: Easychrom.py  SCIEX.py  waters.py
test/sci_instruments/mass/: SCIEX.py
test/stats/: test_cluster.py  test_cluster_perform.py  test_df.py  test_reg.py  test_stats.py  test_test.py
test/web_utils/: task-TaskPool.py  task-coroutine.py  task-process-continue.py  task-thread.py
