[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "mbapy.__version__.__version__"}

[project]
name = "mbapy"
dynamic = ["version"]
description = "MyBA in Python - A comprehensive utility library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BHM-Bob G", email = "bhmfly@foxmail.com"},
]
maintainers = [
    {name = "BHM-Bob G", email = "bhmfly@foxmail.com"},
]
keywords = ["mbapy", "Utilities", "plot", "stats", "pdf", "paper", "crawler", "biology", "game"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8,<3.13"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "chardet",
    "matplotlib>=3.7.5",
    "numpy",
    "pandas",
    "openpyxl",
    "Pillow",
    "requests",
    "scikit-learn",
    "scipy",
    "seaborn>=0.13.0",
    "selenium",
    "urllib3",
    "statsmodels",
    "scikit_posthocs",
    "pdfminer",
    "PyPDF2",
    "rispy",
    "lxml",
    "crossref_commons",
    "tqdm",
    "deprecated",
    "natsort",
]

[project.optional-dependencies]
bio = [
    "wget",
    "pdfplumber",
    "pyteomics",
    "pygame",
    "nicegui[highcharts]",
]
game = [
    "pygame",
    "opencv-python",
]
full = [
    "cn2an",
    "ujson",
    "yaml",
    "pdfplumber",
    "Markdown",
    "imageio",
    "pillow_heif",
    "wget",
    "pyteomics",
    "opencv-python",
    "moviepy",
    "pygame",
    "easyocr",
    "nicegui[highcharts]",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/BHM-Bob/BA_PY"
Repository = "https://github.com/BHM-Bob/BA_PY"
Documentation = "https://mbapy.readthedocs.io"
"Bug Tracker" = "https://github.com/BHM-Bob/BA_PY/issues"
Changelog = "https://github.com/BHM-Bob/BA_PY/blob/main/docs/release_notes"

[project.scripts]
mbapy-cli = "mbapy.scripts:main"

[tool.setuptools]
packages = ["mbapy"]
include-package-data = true

[tool.setuptools.package-data]
mbapy = ["storage/*.so", "storage/*.dll"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mbapy"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "numpy.*",
    "pandas.*",
    "scipy.*",
    "sklearn.*",
    "cv2.*",
    "PIL.*",
    "pygame.*",
    "seaborn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=mbapy",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]

[tool.coverage.run]
source = ["mbapy"]
omit = [
    "*/tests/*",
    "*/test/*",
    "*/__pycache__/*",
    "*/setup.py",
    "*/mbapy/__version__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]